bug(pattern) align steps with y-label

--- a/src/components/atoms/_step.scss
+++ b/src/components/atoms/_step.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   cursor: pointer;
   height: 100%;
+  padding: 0;
   width: 100%;;
   &.active { background: $blue-night; }
   &.selected { background: $turquoise; }
